--- a/index.html
+++ b/index.html
@@ -510,8 +510,11 @@ table.CodeRay td.code>pre{padding:0}
 </style>
 <html>
 <head>
-<script>
-</script>
+<style type="text/css">
+body {
+	font-family: 'Malgun Gothic', '맑은 고딕', dotum, '돋움', sans-serif
+}
+</style>
 </head>
 <body>
 </body>
@@ -556,7 +559,7 @@ table.CodeRay td.code>pre{padding:0}
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-08-05 21:33:03 KST
+Last updated 2019-08-06 08:09:26 KST
 </div>
 </div>
 </body>
