--- a/src/main/asciidoc/docinfo.html
+++ b/src/main/asciidoc/docinfo.html
@@ -1,11 +1,6 @@
-<html>
-<head>
 <style type="text/css">
 body {
 	font-family: 'Malgun Gothic', '맑은 고딕', dotum, '돋움', sans-serif
 }
 </style>
-</head>
-<body>
-</body>
-</html>
+<script data-ad-client="ca-pub-6001719113094141" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
